@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<addon id="plugin.video.rtvs.sk" name="rtvs.sk" provider-name="misanov, Maros Ondrasek" version="1.10.1">
+<addon id="plugin.video.rtvs.sk" name="rtvs.sk" provider-name="misanov, Maros Ondrasek" version="1.10.2">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
     <import addon="script.module.stream.resolver" version="1.6.13" />
